<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.AboutActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/about"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/about_app"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/githubLink"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ripple_back"
        android:contentDescription="@string/github"
        android:src="@drawable/github" />

</LinearLayout>